--- a/.github/workflows/Static Analysis.yml
+++ b/.github/workflows/Static Analysis.yml
@@ -2,10 +2,9 @@
     # This is the Static Analysis workflow, in which we check the code for errors and warnings.
 name: Static Analysis
     
-  on: [push]
-
+on: [push]
     
-  jobs:
+jobs:
     
     # Shell_Check:
     #     name: Shell Check
@@ -33,29 +32,34 @@ name: Static Analysis
             echo "Checking Markdown files"
             markdownlint '**/*.md'
     
-      Python_Lint_Check:
-        name: Python Lint Check
-        runs-on: ubuntu-latest
-        steps:
-          - name: Install pylint
-            run: |
-              pip install pylint
-          - name: Checkout code
-            uses: actions/checkout@v2
-          - name: Run pylint
-            run: |
-               echo "Checking Python files with pylint"
-               pylint --fail-under=9 **/**/*.py
+    Python_Lint_Check:
+      name: Python Lint Check
+      runs-on: ubuntu-latest
+      steps:
+        - name: Install pylint
+          run: |
+           pip install pylint
+        - name: Checkout code
+          uses: actions/checkout@v2
+        - name: Run pylint
+          run: |
+            echo "Checking Python files with pylint"
+            pylint --fail-under=9 **/**/*.py
     
-      YAML_Lint_Check:
-        name: YAML Lint Check
-        runs-on: ubuntu-latest
-        steps:
-          - name: Install yamllint
-            run: sudo apt install yamllint
-          - name: Checkout code
-            uses: actions/checkout@v2
-          - name: Run yamllint
-            run: |
-              echo "Checking YAML files"
-              yamllint -c .yamllint.yaml .github/**/**.yaml
+    YAML_Lint_Check:
+      name: YAML Lint Check
+      runs-on: ubuntu-latest
+      steps:
+        - name: Install yamllint
+          run: sudo apt install yamllint
+        - name: Checkout code
+          uses: actions/checkout@v2
+        - name: Run yamllint
+          run: |
+            echo "Checking YAML files"
+            yamllint -c .yamllint.yaml .github/**/**.yaml
+            yamllint -c .yamllint.yaml .github/**/**.yml
+            yamllint -c .yamllint.yaml **.yaml
+
+
+            
