More Code Changes, trying to update to use latest Raspbian OS

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,5 @@
-FROM raspbian/stretch
+FROM debian:latest
+
 
 RUN apt-get update -y
 RUN apt-get install -y build-essential
@@ -9,6 +10,8 @@ COPY requirements.txt /
 
 RUN pip3 install -r requirements.txt
 
+ARG TSMT_PIN_NUMBER=10
+
 EXPOSE 60000
 ENTRYPOINT ["python3"]
-CMD ["-u","socket_transmitter.py"]
+CMD ["-u","socket_transmitter.py 0.0.0.0 60000 ${TSMT_PIN_NUMBER}"]
