--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,13 @@
 
 services:
   socket-rf-transmitter:
+    build:
+      context: ./src
+      args:
+        TSMT_PIN_NUMBER: 10
+
     container_name: smart-rf-transmitter
-    image: rf_transmitter:v1
+    # image: rf_transmitter:v1
     stdin_open: true
     tty: true
     environment:
