Updating pylint standards

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,14 +4,11 @@ FROM debian:latest
 RUN apt-get update -y
 RUN apt-get install -y build-essential
 RUN apt-get install python3-pip -y
-
-COPY socket_transmitter.py /
 COPY requirements.txt /
-
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r requirements.txt --break-system-package
 
 ARG TSMT_PIN_NUMBER=10
+COPY *.py /
 
 EXPOSE 60000
-ENTRYPOINT ["python3"]
-CMD ["-u","socket_transmitter.py 0.0.0.0 60000 ${TSMT_PIN_NUMBER}"]
+CMD ["/bin/sh", "-c","python3 socket_transmitter.py", "0.0.0.0", "60000", "${TSMT_PIN_NUMBER}"]
