--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,15 @@
 
 services:
   socket-rf-transmitter:
+    container_name: smart-rf-transmitter
     build:
       context: ./src
-      args:
-        TSMT_PIN_NUMBER: 11
-
-    container_name: smart-rf-transmitter
     # image: rf_transmitter:v1
     stdin_open: true
     tty: true
     environment:
       - TZ=Europe/London
+      - TSMT_PIN_NUMBER= 11
 #    devices:
 #      - "/dev/gpiomem:/dev/gpiomem"
     ports:
