--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -22,7 +22,7 @@ updates:
       include: scope
 
   - package-ecosystem: "docker"
-    directory: "/"
+    directory: "/socket_transmitter"
     schedule:
       interval: "weekly"
     commit-message:
